--- a/templates/submit_ticket.html
+++ b/templates/submit_ticket.html
@@ -166,10 +166,11 @@
 
         <div class="footer-text">
             ">
-            © 2025 Waltco Management • Need urgent help? Call 021 551 2345
+            © 2025 Waltco Management • Need urgent help? Call 0663512080
         </div>
     </div>
 </div>
 
 </body>
 </html>
+
